<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailMoviesActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:foreground="@drawable/img_gradient"
            app:expandedTitleMarginEnd="@dimen/expanded_title_margin_end"
            app:expandedTitleMarginStart="@dimen/expanded_title_margin_start"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/poster"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/poster_spiderman" />
            
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/text_favorite"
        android:src="@drawable/ic_unfavorite"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|right|end" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/movies_nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryVariant"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movies_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/element_padding">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_rate_80"
                android:contentDescription="@string/detail_rate"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/movies_rate" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline5.Detail"
                android:id="@+id/movies_rate"
                app:layout_constraintBottom_toBottomOf="@+id/ic_rate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="7.5"/>

            <ImageView
                android:id="@+id/movies_poster"
                android:layout_width="139dp"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/element_margin"
                android:contentDescription="@string/poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movies_tagline"
                tools:src="@drawable/poster_spiderman" />

            <TextView
                android:id="@+id/movies_tagline"
                style="@style/TextAppearance.MaterialComponents.Body2.Info"
                android:layout_marginBottom="@dimen/element_margin"
                android:layout_marginTop="@dimen/element_margin"
                android:textSize="13sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ic_rate"
                tools:text="From Verse to Reverse" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2.Detail"
                android:id="@+id/text_release"
                android:text="@string/realease_date"
                android:layout_marginBottom="@dimen/element_margin"
                app:layout_constraintBottom_toTopOf="@id/text_status"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2.Info"
                android:id="@+id/movies_release"
                android:layout_marginStart="@dimen/detail_margin_start"
                android:layout_marginBottom="@dimen/element_margin"
                app:layout_constraintBottom_toTopOf="@+id/movies_status"
                app:layout_constraintStart_toEndOf="@+id/text_release"
                tools:text="2016, Desc 18" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2.Detail"
                android:id="@+id/text_status"
                android:layout_marginBottom="@dimen/element_margin_80"
                android:text="@string/text_status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/text_description"/>

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2.Info"
                android:id="@+id/movies_status"
                android:layout_marginStart="@dimen/detail_margin_start"
                android:layout_marginBottom="@dimen/element_margin_80"
                app:layout_constraintStart_toEndOf="@id/text_status"
                app:layout_constraintBottom_toTopOf="@id/text_description"
                tools:text="Released" />


            <TextView
                android:id="@+id/text_description"
                style="@style/TextAppearance.MaterialComponents.Headline6.Detail"
                android:text="@string/text_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movies_poster" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2.Info"
                android:id="@+id/movies_desc"
                android:layout_marginTop="@dimen/element_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_description"
                tools:text="@string/movies_desc"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>