<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_menu_movie"
        android:title="@string/title_movies" />

    <item
        android:id="@+id/navigation_tvshows"
        android:icon="@drawable/ic_menu_tvshows"
        android:title="@string/title_tvshows" />

</menu>