...
    <string name="movies_desc">Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson Kingpin Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</string>
    <string name="tvshowhs_desc">Seven noble families fight for control of the mythical land of Westeros. Friction between the houses leads to full-scale war. All while a very ancient evil awakens in the farthest north. Amidst the war, a neglected military order of misfits, the Night\'s Watch, is all that stands between the realms of men and icy horrors beyond.</string>
    <string name="text_creators">Creators:</string>
    <string name="desc_all_trending">All Trending</string>
    <string name="text_status">Status:</string>
    <string name="text_season">Number of Season:</string>
    <string name="menu_favorite">Menu Favorite</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="tab_text_1">Movie Favorite</string>
    <string name="tab_text_2">Tv Show Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_favorite">Favorite</string>
    <string name="movie_favorite">Movie ini ditambahkan ke favorite</string>
    <string name="movie_unfavorite">Movie ini dihapus dari favorite</string>
    <string name="tvshow_favorite">Tv Shows ini ditambahkan ke favorite</string>
...
